# banshee-doubanfm

./: .hgignore  AUTHORS  Makefile.am  ProjectHome.md  README.md  Releases.md  autogen.sh  configure.ac
debian/: changelog  control  copyright  gbp.conf  rules
po/: LINGUAS  POTFILES.in  zh_CN.po
src/: Makefile.am
src/DoubanFM/: DoubanFM.addin.xml  DoubanFM.csproj  DoubanFM.sln  Makefile.am
src/DoubanFM/Banshee.DoubanFM/: Captcha.cs  Configuration.cs  DoubanFM.cs  DoubanFMActions.cs  DoubanFMBrowser.cs  DoubanFMChannel.cs  DoubanFMCoverFetchJob.cs  DoubanFMSong.cs  DoubanFMSource.cs  DoubanFMSourceContents.cs  HTTPUtils.cs  IDoubanFMPlayQueue.cs  Widgets.cs
src/DoubanFM/Resources/: UI.xml
src/DoubanFM/gtk-gui/: Banshee.DoubanFM.Captcha.cs  Banshee.DoubanFM.Configuration.cs  gui.stetic
