ASSEMBLY = Banshee.DoubanFM
LINK = $(BANSHEE_LIBS)

SOURCES =  \
	Banshee.DoubanFM/Captcha.cs \
	Banshee.DoubanFM/Configuration.cs \
	Banshee.DoubanFM/DoubanFM.cs \
	Banshee.DoubanFM/DoubanFMActions.cs \
	Banshee.DoubanFM/DoubanFMBrowser.cs \
	Banshee.DoubanFM/DoubanFMChannel.cs \
	Banshee.DoubanFM/DoubanFMCoverFetchJob.cs \
	Banshee.DoubanFM/DoubanFMSong.cs \
	Banshee.DoubanFM/DoubanFMSource.cs \
	Banshee.DoubanFM/DoubanFMSourceContents.cs \
	Banshee.DoubanFM/HTTPUtils.cs \
	Banshee.DoubanFM/IDoubanFMPlayQueue.cs \
	Banshee.DoubanFM/Widgets.cs \
	gtk-gui/Banshee.DoubanFM.Captcha.cs \
	gtk-gui/Banshee.DoubanFM.Configuration.cs \
	gtk-gui/generated.cs

RESOURCES =  \
	DoubanFM.addin.xml \
	gtk-gui/gui.stetic \
	Resources/doubanfm.png \
	Resources/doubanfm_banner.jpg \
	Resources/UI.xml

include $(top_srcdir)/build/build.mk
